# ============================================================================
# uffs-broker: Windows Access Broker
# ============================================================================
# Tiny Windows service that provides elevated MFT handles to the daemon.
# The daemon runs as a normal user; the broker runs elevated and hands
# out read-only volume handles on request.
# ============================================================================

[package]
name = "uffs-broker"
description = "UFFS Access Broker — Windows service for elevated MFT handle brokering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
# Intentionally NOT published.  `uffs-broker` is a Windows-only `[[bin]]`
# (elevated handle vendor) — there is no library API.  `cargo install
# uffs-broker` would install a standalone Windows handle-broker binary,
# which is meaningless outside the UFFS daemon pairing.  Reserve the name
# on crates.io to prevent squatting, but never carry content.  See
# deep-dive in `docs/refactor/crates-io-publishability-deep-dive.md` §7.5.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# `uffs-broker` is a Windows-elevated handle broker; on non-Windows the
# binary's `main()` short-circuits.  Override `default-target` to the MSVC
# triple so docs.rs renders the Windows API integration that's the entire
# point of this crate.  See `uffs-time/Cargo.toml` for the rationale on
# `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-pc-windows-msvc"]
default-target = "x86_64-pc-windows-msvc"

[[bin]]
name = "uffs-broker"
path = "src/main.rs"

[dependencies]
# `tracing` macros are used cross-platform: the bin's non-Windows path
# in `main.rs` emits `tracing::error!` before exiting.  The Windows-only
# broker logic uses `tracing` heavily in `broker.rs`.
tracing.workspace = true

# Windows-only deps: the elevated handle-broker logic in `broker.rs` is
# fully `#[cfg(windows)]`, so its supporting crates compile only on the
# Windows target.  Scoped to `[target.'cfg(windows)'.dependencies]` so
# the bin's non-Windows compilation (a tiny error-message stub in
# `main.rs`) doesn't pull in `anyhow`, `tracing-subscriber`, `windows`,
# or the broker protocol — each would otherwise be visible-but-unused
# on Linux/macOS and need a `use X as _;` marker.  F5 / issue #205.
[target.'cfg(windows)'.dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
windows.workspace = true
# Wire-protocol types shared with `uffs-daemon::broker_client`.  Lives
# in its own dedicated crate (`crates/uffs-broker-protocol/`) so the
# pure-logic protocol module is cross-platform-testable without
# dragging the Windows FFI surface along.
uffs-broker-protocol.workspace = true

[lints]
workspace = true
