# ============================================================================
# uffs-cli: Thin CLI Client
# ============================================================================
# Lightweight command-line client for UFFS.  All heavy lifting (MFT reading,
# polars queries, index management) happens in the daemon (`uffsd`).
# This crate depends only on `uffs-client` for IPC and formatting helpers.
#
# Usage:
#   uffs "*.rs" --drive C
#   uffs stats
#   uffs daemon start
# ============================================================================

[package]
name = "uffs-cli"
description = "Thin command-line client for UFFS (Ultra Fast File Search)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6→R8 deviation row 5 — polars-subtree publishability deferred.
# This crate inherits polars transitively via
# `uffs-client + uffs-format → uffs-mft → uffs-polars`; no direct
# polars references in code.  `cargo package` resolves the full dep
# tree, so this crate hard-fails until polars upstream publishes a
# release with the nightly-API patches our git/rev pin carries.  Note:
# end-user installation via `just use` (GitHub Releases tarball) is
# unaffected — only `cargo install uffs-cli` is blocked, and that path
# was never the recommended install method anyway.  See
# `crates/uffs-polars/Cargo.toml` and the deviation log row 5 in
# `docs/architecture/release-automation-plan.md`.
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# Multi-target build so platform-gated CLI subcommands render in docs.
# See `uffs-time/Cargo.toml` for the rationale on `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[[bin]]
name = "uffs"
path = "src/main.rs"

[dependencies]
# UFFS client library (IPC, protocol, format helpers).
# `default-features = false` drops the async `UffsClient` + tokio
# dependency (and therefore `ws2_32.dll`) from the CLI binary.  The CLI
# uses only `connect_sync::UffsClientSync`.
#
# Not using `.workspace = true` here: workspace inheritance cannot
# override `default-features`, so we point at the path directly.  The
# version is pinned by the workspace via path dependency resolution.
# `version = "0.5.90"` is required for `cargo package` validation —
# see root `Cargo.toml`'s [workspace.dependencies] note for the full
# rationale (R6 of `release-automation-plan.md`).
uffs-client = { path = "../uffs-client", version = "0.5.90", default-features = false }

# Canonical CSV / parity / legacy-footer writer.  Direct dep (not a
# re-export chain through `uffs-client`) so the CLI and the daemon
# hit the same `uffs_format::*` symbols without an indirection layer.
# `version = "0.5.90"` is required for `cargo package` validation —
# see root `Cargo.toml`'s [workspace.dependencies] note for the full
# rationale (R6 of `release-automation-plan.md`).
uffs-format = { path = "../uffs-format", version = "0.5.90" }

# Typed drive-letter newtype.  Direct dep so the CLI command signatures
# (`daemon_load`, `daemon_tiering`, etc.) name `DriveLetter` natively
# rather than re-exporting through `uffs-client`.  Wire format is
# unchanged — the (de)serialise impl emits a single ASCII char.
uffs-mft.workspace = true

# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true

# Locates executables on `PATH` (e.g. the daemon binary when auto-spawning).
which.workspace = true

# FILETIME arithmetic only — zero-dep crate extracted from uffs-mft so
# the CLI does not transitively link polars, tokio/net, reqwest, or
# object_store.  Use `uffs_time::{filetime_to_calendar,
# filetime_with_tz_bias}` for timestamp formatting.
uffs-time.workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Features
# ─────────────────────────────────────────────────────────────────────────────
# `mcp-http-probe`: enable `uffs system-status` probing of the MCP HTTP
# gateway.  Disabled by default because it is the sole user of
# `std::net::TcpStream` in the CLI, which unconditionally links
# `ws2_32.dll` on Windows and adds measurable process-launch overhead.
# Without this feature, `system-status` still reports the configured
# HTTP bind address — it just doesn't actively probe `/status`.
[features]
default = []
mcp-http-probe = []

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true

# ─────────────────────────────────────────────────────────────────────────────
# Build dependencies
# ─────────────────────────────────────────────────────────────────────────────
# `winresource`: actively-maintained fork of `winres`.  Used in build.rs
# to embed the UFFS icon (`assets/brand/icons/uffs.ico`) and the
# `app.manifest` (asInvoker, PerMonitorV2 DPI, long-path aware) into
# the `uffs.exe` PE binary on MSVC targets.  Inert on non-Windows.
# Version is pinned at workspace scope — see root Cargo.toml.
[build-dependencies]
winresource.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
