# ============================================================================
# uffs-client: Thin Client Library for UFFS Daemon
# ============================================================================
# All surfaces (CLI, TUI, GUI, MCP) use this crate to communicate with the
# daemon. Handles auto-start, connection, keepalive, and reconnect.
# ============================================================================

[package]
name = "uffs-client"
description = "Thin client library for UFFS daemon — connect, query, lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

# Phase R6→R8 deviation row 5 — polars-subtree publishability deferred.
# Despite the "thin-client invariant: zero polars" intent above, this
# crate's dep tree includes `uffs-format → uffs-mft → uffs-polars` for
# the shared CSV formatter.  `cargo package` resolves the full dep
# tree, so this crate inherits the polars-subtree publishability
# problem until polars upstream publishes a release with the nightly-
# API patches our git/rev pin carries.  See
# `crates/uffs-polars/Cargo.toml` and the deviation log row 5 in
# `docs/architecture/release-automation-plan.md`.  (A future R9+ RFC
# could move `len_to_u16` and `parity_attributes` into a polars-free
# foundation crate to break this transitive chain.)
publish.workspace = true

# Phase R6 of `release-automation-plan.md` step 3 — docs.rs build config.
# Multi-target build so the Unix-domain-socket and Windows-named-pipe IPC
# transports BOTH render in the docs.  See `uffs-time/Cargo.toml` for the
# rationale on `--cfg docsrs`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[features]
# Default enables the async `UffsClient` (tokio-based) so existing
# consumers (`uffs-daemon`, `uffs-mcp`) keep working with no change.
# The CLI (`uffs-cli`) overrides with `default-features = false` to
# drop tokio + `ws2_32.dll` from the hot-path binary.
default = ["async"]
async = ["dep:tokio"]

[dependencies]
# Internal
uffs-security.workspace = true
# Shared CSV formatter — the thin-client path feeds its `SearchRow`s
# through `uffs_format::write_rows`, giving byte-identical stdout
# output with the daemon's `--out=file` path.  Zero polars, zero
# tokio — preserves the thin-client binary-size invariant.
uffs-format.workspace = true

# Async — optional; only pulled when the `async` feature is enabled.
# The sync `UffsClientSync` used by the CLI does not depend on tokio.
# `net` is required for `tokio::net::UnixStream` / named-pipe client.
tokio = { workspace = true, features = ["net"], optional = true }

# Serialization (JSON-RPC)
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Platform dirs (for socket/pipe path)
dirs-next.workspace = true
memmap2.workspace = true

# libc: macOS proc_pidpath (verify.rs) + kill(pid, 0) process check (connect_sync.rs)
[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
# Temporary PID-file fixtures for verify_strict / deep_health_check tests.
tempfile.workspace = true

[lints]
workspace = true
