# ============================================================================
# uffs-core: Query Engine Library
# ============================================================================
# This crate provides the query engine for searching and filtering MFT data
# using Polars lazy API for optimal performance.
#
# Features:
# - Fluent query builder API
# - Glob and regex pattern matching
# - Path resolution (FRS → full path)
# - Multiple export formats (table, JSON, CSV)
# ============================================================================

[package]
name = "uffs-core"
description = "Query engine for UFFS (Ultra Fast File Search) using Polars"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Internal crates
uffs-polars.workspace = true
uffs-mft.workspace = true

# Error handling
thiserror.workspace = true

# Serialization (for export)
serde_json.workspace = true

# Parallelization
rayon.workspace = true
chrono.workspace = true

# String matching (SIMD-optimized for IndexQuery)
regex.workspace = true
memchr.workspace = true
aho-corasick.workspace = true
globset.workspace = true

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[[bench]]
name = "query"
harness = false

[[bench]]
name = "search_benchmarks"
harness = false

# ─────────────────────────────────────────────────────────────────────────────
# Lints (inherit from workspace)
# ─────────────────────────────────────────────────────────────────────────────
[lints]
workspace = true

