# ============================================================================
# uffs-daemon: Background Service Process
# ============================================================================
# Holds MFT compact index + trigrams in memory, serves queries via IPC
# (Unix domain socket / Windows named pipe). Auto-starts on first client
# connection, auto-retires after idle timeout.
# ============================================================================

[package]
name = "uffs-daemon"
description = "UFFS background daemon (uffsd) — holds MFT index, serves queries via IPC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "uffsd"
path = "src/main.rs"

[lib]
name = "uffs_daemon"
path = "src/lib.rs"

[dependencies]
# Internal
uffs-security.workspace = true
uffs-mft.workspace = true
uffs-core.workspace = true
uffs-client.workspace = true
# Shared CSV formatter — the daemon's `try_pack_csv_blob` feeds
# `SearchRow`s through `uffs_format::write_rows` so pre-formatted
# blobs are byte-identical to the CLI's local formatter.
uffs-format.workspace = true

# Async — `net` re-enabled here because the daemon's IPC server uses
# `tokio::net::UnixListener` (unix) / `NamedPipeServer` (windows).
tokio = { workspace = true, features = ["net"] }
# `futures::future::Shared` + `BoxFuture` + `FuturesUnordered` for the
# per-letter single-flight dedup in
# `IndexManager::ensure_warm_for_dispatch`'s
# `load_or_join_in_flight` helper (PR-e: thundering-herd promote
# fix — see `docs/refactor/promote-thundering-herd-fix.md`).
futures = { workspace = true }

# Serialization (JSON-RPC)
serde.workspace = true
serde_json.workspace = true
# Phase 6 of memory-tiering: `daemon.toml` parser in
# `crate::config` (DaemonConfig with [memory] / [tiers] / [shards] /
# [shards.per_drive] sections; per-drive tier overrides feed the
# adaptive-TTL controller).
toml.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Platform dirs
dirs-next.workspace = true

# CLI
clap.workspace = true

# Random (nonce generation for shutdown auth)
rand.workspace = true
mimalloc.workspace = true
libmimalloc-sys = { version = "0.1.44", features = ["extended"] }

# Unix PID file liveness check
[target.'cfg(unix)'.dependencies]
libc.workspace = true

# Windows PID file liveness check
[target.'cfg(windows)'.dependencies]
windows.workspace = true

[dev-dependencies]
# Phase 1 of memory-tiering: property-test the `ShardState` legal-transition
# graph in `crates/uffs-daemon/src/cache/shard.rs`.  Workspace-pinned to
# `proptest = "1.11.0"` (see top-level `Cargo.toml`).
proptest.workspace = true
# Phase 2b of memory-tiering: scoped tempdirs for the runtime-orphan-sweep
# test in `src/lib.rs::tests`.
tempfile.workspace = true
# Phase 7 task 7.2 of memory-tiering: `tokio::test(start_paused = true)` +
# `tokio::time::advance` for deterministic time-based assertions on the
# per-shard USN journal loop in `src/cache/journal_loop/tests.rs`.  Matches
# the pattern already used by `uffs-core`, `uffs-mft`, and `uffs-mcp`.
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
